[gd_scene load_steps=6 format=3 uid="uid://bkkxih0nng7s2"]

[ext_resource type="Script" path="res://scripts/title_screen.gd" id="1_p6ps8"]
[ext_resource type="Texture2D" uid="uid://babv1qih4ky0q" path="res://assets/title_screen/sky-bg.jpg" id="2_k4ntx"]
[ext_resource type="Theme" uid="uid://burrrtpd8blug" path="res://themes/default_btn.tres" id="4_skgng"]
[ext_resource type="Texture2D" uid="uid://ce61jbv8c6rlx" path="res://assets/title_screen/rato_e_capivara.png" id="5_sfyfl"]
[ext_resource type="AudioStream" uid="uid://udht8rg6akl" path="res://assets/sounds/background_music.mp3" id="6_ox2j6"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p6ps8")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -2.0
offset_top = -3.0
offset_right = 2017.0
offset_bottom = 1103.0
texture = ExtResource("2_k4ntx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 894.0
offset_bottom = 680.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.564972, 0.485075)
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("5_sfyfl")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "ESCOLHA A DIFICULDADE"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_skgng")
text = "FÁCIL"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="Button2" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_skgng")
text = "MÉDIO"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20

[node name="Button3" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_skgng")
text = "IMPOSSÍVEL"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ox2j6")
volume_db = -1.253
autoplay = true

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
